--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "heroku-postbuild": "cd inotebook && npm install && npm run build"
+    "heroku-postbuild": "cd build && npm install && npm run build"
   },
   "author": "Ankit Jangir",
   "license": "ISC",
