--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "cloudinary": "^1.30.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.4",
+    "mongoose": "^6.11.5",
+    "nodemon": "^3.0.1",
     "path": "^0.12.7"
   }
 }
